--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "jest": "^27.4.3",
     "nodemon": "^2.0.3"
   },
   "scripts": {
     "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "test": "jest"
   }
 }
