--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "devDependencies": {
     "jest": "^27.4.3",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "supertest": "^6.1.6"
   },
   "scripts": {
     "dev": "nodemon src/index.js",
